# GenericEKF

./: CMakeLists.txt  README.md
inc/: CVModel2D.hpp  ExtendedKalmanFilter.hpp  IMotionModel.hpp  KalmanFilterBase.hpp  MeasurementModelBase.hpp  MotionModelBase.hpp  MotionModelHandler.hpp  XYMeasurementModel.hpp  data_types.hpp
src/: CVMode2D.cpp  EgoVehicle.hpp  ExtendedKalmanFilter.cpp  XYMeasurementModel.cpp  main.cpp
